// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 480,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 640,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 880,
    "note": "Ab3",
    "time": 640,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 1000,
    "note": "Ab3",
    "time": 880,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 64,
    "next": 1320,
    "note": "E3",
    "time": 1000,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 1560,
    "note": "E3",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 61,
    "next": 1920,
    "note": "Db3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 480,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 720,
    "note": "E3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 960,
    "note": "E3",
    "time": 720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 1440,
    "note": "Ab3",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 64,
    "next": 1600,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 2080,
    "note": "E3",
    "time": 1600,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 61,
    "next": 2400,
    "note": "Db3",
    "time": 2080,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 2640,
    "note": "Ab3",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 3120,
    "note": "Ab3",
    "time": 2640,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 3360,
    "note": "E3",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 3600,
    "note": "Ab3",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 3720,
    "note": "Ab3",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 3840,
    "note": "Ab3",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 480,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 76,
    "next": 640,
    "note": "E4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 78,
    "next": 880,
    "note": "F#4",
    "time": 640,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 76,
    "next": 1000,
    "note": "E4",
    "time": 880,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 74,
    "next": 1320,
    "note": "D4",
    "time": 1000,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 1560,
    "note": "C#4",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 69,
    "next": 1920,
    "note": "A3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 480,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 720,
    "note": "D4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 960,
    "note": "B3",
    "time": 720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 76,
    "next": 1440,
    "note": "E4",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 73,
    "next": 1600,
    "note": "C#4",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 2080,
    "note": "B3",
    "time": 1600,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 71,
    "next": 2400,
    "note": "B3",
    "time": 2080,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 2640,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 76,
    "next": 3120,
    "note": "E4",
    "time": 2640,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 3360,
    "note": "D4",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 3600,
    "note": "E4",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 76,
    "next": 3720,
    "note": "E4",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 78,
    "next": 3840,
    "note": "F#4",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should generate motif with given durations 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 480,
    "note": "B3",
    "time": 0,
  },
  Object {
    "dur": 960,
    "isRest": false,
    "midi": 80,
    "next": 1440,
    "note": "G#4",
    "time": 480,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 74,
    "next": 1800,
    "note": "D4",
    "time": 1440,
  },
]
`;

exports[`A Motif test suite should generate motif with rests 1`] = `
Array [
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 120,
    "note": "E4",
    "time": 0,
  },
  Object {
    "dur": 200,
    "isRest": true,
    "midi": -1,
    "next": 320,
    "note": "",
    "time": 120,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 73,
    "next": 440,
    "note": "C#4",
    "time": 320,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 74,
    "next": 560,
    "note": "D4",
    "time": 440,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 680,
    "note": "",
    "time": 560,
  },
  Object {
    "dur": 400,
    "isRest": true,
    "midi": -1,
    "next": 1080,
    "note": "",
    "time": 680,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 74,
    "next": 1400,
    "note": "D4",
    "time": 1080,
  },
  Object {
    "dur": 240,
    "isRest": true,
    "midi": -1,
    "next": 1640,
    "note": "",
    "time": 1400,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 74,
    "next": 1760,
    "note": "D4",
    "time": 1640,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 2080,
    "note": "E4",
    "time": 1760,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
Array [
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 68,
    "next": 800,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 68,
    "next": 1520,
    "note": "Ab3",
    "time": 800,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 1760,
    "note": "E3",
    "time": 1520,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 1920,
    "note": "Ab3",
    "time": 1760,
  },
]
`;
